force-app/main/default/objects/Credit_memo_line_item__c/Credit_memo_line_item__c.object-meta.xml
<CustomObject>
    <label>Credit Memo Line Item</label>
    <nameField>
        <displayFormat>CMLI-{0000}</displayFormat>
        <label>Cedit Memo Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Memo Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>