force-app/main/default/objects/Credit_memo_line_item__c/fields/Credit_Memo_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Number__c</fullName>
    <label>Credit Memo Number</label>
    <referenceTo>Credit_Memo__c</referenceTo>
    <relationshipLabel>Credit Memo Line Items</relationshipLabel>
    <relationshipName>Credit_Memo_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>