force-app/main/default/objects/Credit_memo_line_item__c/fields/Is_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Is_Deposit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deposit</label>
    <type>Checkbox</type>
</CustomField>