force-app/main/default/objects/Credit_memo_line_item__c/fields/Is_Discount__c.field-meta.xml
<CustomField>
    <fullName>Is_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Discount</label>
    <type>Checkbox</type>
</CustomField>