force-app/main/default/objects/Credit_memo_line_item__c/fields/Netsuite_GST_Code__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_GST_Code__c</fullName>
    <formula>IF(Credit_Memo_Number__r.Currency_Code__c==&apos;SGD&apos;,IF(Is_Deposit__c,&apos;UNDEF-SG&apos;,&apos;SR-SG&apos;),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Netsuite GST Code</label>
    <type>Text</type>
</CustomField>