force-app/main/default/objects/Credit_memo_line_item__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package</label>
    <referenceTo>Package__c</referenceTo>
    <relationshipLabel>Credit Memo Line Items</relationshipLabel>
    <relationshipName>Credit_Memo_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>