force-app/main/default/objects/Credit_memo_line_item__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <formula>Credit_Memo_Number__r.Name+&quot; - &quot;+Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction ID</label>
    <type>Text</type>
</CustomField>